#4731# Steel theme layout issue on lower resolutions

--- a/plugins/themes/steel/steel.css
+++ b/plugins/themes/steel/steel.css
@@ -60,8 +60,7 @@ input.defaultButton {
 }
 
 #main {
-	padding-left: 10px;
-	padding-right: 10px;
+	padding-left: 5px;
 	background-color: #f9f9f9;
 	border-left: 1px solid black;
 	border-right: 1px solid black;
